Fix del flex wrap

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ img{
   border: 1px solid #ffffff;
   border-radius: 6px;
   display: flex; 
-  width: calc(100% / 5);  
+  width: 250px; 
   flex-direction: column;
   margin-bottom: 10px;
   margin-right: 10px;
